<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="2"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/ayudatxt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="left"
                android:text="@string/nombre_consulta_lbl"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/nombre_consulta"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_weight="1"
                android:hint="@string/nombre_consulta_txt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="left"
                android:text="@string/telefono_consulta_lbl"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/telefono_consulta"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
                android:hint="@string/telefono_consulta_txt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="left"
                android:text="@string/correo_consulta_lbl"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/email_consulta"
                android:layout_width="254dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:hint="@string/correo_consulta_txt"
                android:inputType="textEmailAddress"
                android:textSize="15sp" >

                <requestFocus />
            </EditText>
        
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="2"
                    android:gravity="left"
                    android:text="@string/descripcion_consulta_lbl"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/descripcion_consulta"
                    android:layout_width="fill_parent"
                    android:layout_height="71dp"
                    android:gravity="left"
                    android:inputType="textMultiLine" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_nuevo_comentario"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:gravity="center"
                android:text="@string/btn_Enviar" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>